<?xml version="1.0"?>
<package format="3">
  <name>fbrtab_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for fbrtab SLAM</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
